--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku main",
-    "postdeploy": "npm run migrate:production"
+    "postdeploy": "npm run migrate"
   },
   "keywords": [],
   "engines": {
